@@ -15,6 +15,7 @@ struct Settings {
     QCryptographicHash::Algorithm algorithm = QCryptographicHash::Sha256;
     FilterRule filter;
     QString dbPrefix = "checksums";
+    bool restoreLastPathOnStartup = false;
     bool addWorkDirToFilename = true;
     bool isLongExtension = true;
     bool saveVerificationDateTime = true;
