@@ -3,6 +3,7 @@ Veretino 0.3.3
 * Added a button to reset default settings.
 * Added icons to database items and to the list of file types in the Folder Content analyzer.
 * Added the ability to hide some columns (now also for the file system view).
+* Now the last path opens on startup (can be enabled in the settings).
 * Improved checksum summary file handling.
 * Enabled centering of messages and dialog boxes.
 
